[package]
name = "mini-cache"
version = "0.2.0"
edition = "2021"
authors = ["saltnuclear <1070832877@qq.com>"]
description = "A high-performance in-memory cache server built with Rust & Tokio"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "mini-cache"
path = "src/main.rs"
